# CraftTranslate

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts  settings.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  hotkey.rs  lib.rs  main.rs  models.rs  popup.rs  selection.rs  tray.rs  window.rs
src/providers/: baiduGeneral.ts  catalog.ts  mock.ts  openaiCompatible.ts  translator.ts  types.ts
src/providers/__tests__/: baiduGeneral.test.ts  catalog.test.ts  openaiCompatible.test.ts
src/settings/__tests__/: normalize.test.ts
src/ui/: hotkey.ts  html.ts
src/ui/__tests__/: hotkey.test.ts
